Fix tab list on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,8 @@ body, ul {
   margin: 0;
   padding: 0;
 }
+
+a {
+  color: currentColor;
+  text-decoration: inherit;
+}
