--- a/src/tabs.css
+++ b/src/tabs.css
@@ -5,11 +5,15 @@
 }
 
 .TabList {
-  display: flex;
+  display: grid;
+  grid-gap: 1em;
   list-style: none;
-  padding: 0 0.5em;
+  margin: 0 1em;
+  max-width: calc(100vw - 2em);
+  overflow-x: auto;
+  padding: 1em 0;
   position: absolute;
-  top: 1em;
+  top: 0;
   z-index: 2;
 }
 
@@ -17,8 +21,9 @@
 
 .TabListItem {
   color: hsl(0, 0%, 0%);
-  padding: 1em 0.5em;
+  grid-row-start: 1;
   text-decoration: none;
+  white-space: nowrap;
 }
 
 .TabListItem:focus,
